removed hardcoded base URL from index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   }
   </script>
 
-  <form role="form" name="urlform" action="http://localhost:8080/v1/ConvertURL" method="POST">
+  <form role="form" name="urlform" action="/v1/ConvertURL" method="POST">
   <t> <font color="blue"> Please enter long URL </font> </t>
   <input type="text" id=url name="url" value="google"/>
   <input type="submit" value="Make Tiny url"/>
